--- a/locales/en.json
+++ b/locales/en.json
@@ -7,7 +7,7 @@
   },
   "home": {
     "title": "Welcome",
-    "introduction": "This is an introduction in English."
+    "introduction": "WHAT Coin WHICH Coin is crypto currency price dashboard showing Bitcoin, XRP, Litecoin, Bitcoin Cash. designed to view prices at a glance from various cryto currency exchanges around the world."
   },
   "footer": {
     "text": "The Prices are realtime data, sourced from the respective providers public API. Click here to see a list."
