--- a/locales/pt.json
+++ b/locales/pt.json
@@ -1,15 +1,14 @@
 {
   "links": {
     "home": "Home",
-    "about": "About",
     "english": "English version",
     "portuguese": "portuguese version"
   },
   "home": {
-    "title": "Bem vinda",
-    "introduction": "O QUE Coin WHICH Coin é o painel de preço da moeda criptografada mostrando Bitcoin, XRP, Litecoin, Bitcoin Cash. Concebido para ver os preços de uma só vez a partir de várias bolsas de moeda em todo o mundo."
-  },
-  "footer": {
-    "text": "Os preços são dados em tempo real, provenientes da API pública dos respectivos provedores. Clique aqui para ver uma lista."
+    "title": "What Coin Which Coin",
+    "introduction": "Os preços são dados em tempo real, provenientes da API pública dos respectivos provedores.",
+    "built-with": "Construído com VueJs por Mannuel Ferreira",
+    "say-hello": "diga olá.",
+    "fork-it": "Copie este."
   }
 }
