--- a/locales/en.json
+++ b/locales/en.json
@@ -16,6 +16,10 @@
     "say-hello": "say hello.",
     "fork-it": "Fork it."
   },
+  "bitstamp": {
+    "title": "Bitstamp | What Coin Which Coin",
+    "description": "Bitstamp is a crypto currency exchange based in Luxembourg with offices in London. USD, EUR, bitcoin, litecoin, ethereum, ripple or bitcoin cash deposits and withdrawals are allowed on this platform."
+  },
   "luno": {
     "title": "Luno | What Coin Which Coin",
     "description": "Luno is a crypto currency exchange headquartered in London with offices in Cape Town and Singapore. You can buy and trade Bitcoin, Bitcoin Cash and Etherium"
