add navbar, tidy up a bit

--- a/locales/pt.json
+++ b/locales/pt.json
@@ -1,8 +1,10 @@
 {
   "links": {
     "home": "Home",
-    "english": "English version",
-    "portuguese": "portuguese version"
+    "english": "EN",
+    "portuguese": "PT",
+    "luno": "luno",
+    "bitstamp": "bitstamp"
   },
   "site-name": {
     "p1": "Que",
