remove rollbar for now. style links

--- a/locales/pt.json
+++ b/locales/pt.json
@@ -3,8 +3,8 @@
     "home": "Home",
     "english": "EN",
     "portuguese": "PT",
-    "luno": "luno",
-    "bitstamp": "bitstamp"
+    "luno": "Luno",
+    "bitstamp": "Bitstamp"
   },
   "site-name": {
     "p1": "Que",
